--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "license": "MIT",
   "dependencies": {
     "babel-polyfill": "^6.8.0",
+    "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "flexxed": "^0.5.1",
     "moment": "^2.17.1",
