make webpack a dep

--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "postinstall": "npm run build",
     "test": "",
     "start": "node dev-server",
-    "build": "rimraf build && webpack --config ./webpack.production.config.js --progress --profile --colors",
+    "build": "rm -rf build && webpack --config ./webpack.production.config.js --progress --profile --colors",
     "eslint": "eslint app"
   },
   "keywords": [],
@@ -29,7 +29,8 @@
     "react-router-redux": "^4.0.4",
     "react-spinkit": "^1.1.11",
     "react-tabs": "^0.8.2",
-    "redux": "^3.5.2"
+    "redux": "^3.5.2",
+    "webpack": "^1.13.0"
   },
   "devDependencies": {
     "autoprefixer": "^6.6.1",
@@ -64,7 +65,7 @@
     "stats-webpack-plugin": "^0.3.1",
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
-    "webpack": "^1.13.0",
+
     "webpack-dev-server": "^1.14.1"
   }
 }
