--- a/package.json
+++ b/package.json
@@ -18,7 +18,6 @@
     "express": "^4.14.0",
     "file-loader": "^0.9.0",
     "flexxed": "^0.5.1",
-    "moment": "^2.17.1",
     "parse": "^1.9.0",
     "react": "^15.0.2",
     "react-dom": "^15.0.2",
@@ -65,6 +64,7 @@
     "style-loader": "^0.13.1",
     "url-loader": "^0.5.7",
     "webpack": "^1.13.0",
+    "webpack-dashboard": "^0.2.1",
     "webpack-dev-server": "^1.14.1"
   }
 }
